"feat: [add] chart_data&&chart_data_generator&&chart_generator_factor&&dynamic_chart_data_generator&&static_chart_data_generator"
