# models/chart_data.go
@@ -6,8 +6,9 @@ import "go.mongodb.org/mongo-driver/bson/primitive"
 
 // ChartData 图表数据（MongoDB）
 type ChartData struct {
-	ID     primitive.ObjectID     `bson:"_id,omitempty" json:"id"`
-	Type   string                 `bson:"type" json:"type" example:"monthly"`
-	Meta   map[string]interface{} `bson:"meta" json:"meta"`
-	Values interface{}            `bson:"values" json:"values"`
+	ID             primitive.ObjectID     `bson:"_id,omitempty" json:"id"`
+	Type           string                 `bson:"type" json:"type" example:"monthly"`
+	Meta           map[string]interface{} `bson:"meta" json:"meta"`
+	Values         interface{}            `bson:"values" json:"values"`
+	DataSourceType string                 `bson:"data_source_type" json:"data_source_type"` // "static" 或 "dynamic"
 }
